--- a/src/BlogTests/BlogTests.csproj
+++ b/src/BlogTests/BlogTests.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\BaseControllerTests.cs" />
     <Compile Include="Helpers\HtmlHelperExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
