--- a/src/Blog/Views/Web.config
+++ b/src/Blog/Views/Web.config
@@ -16,6 +16,8 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
+        <add namespace="Blog.Helpers"/>
+        <add namespace="Blog.Globalization"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
