added culture helpers for rendering correct bundles based on locale

--- a/src/Blog/Blog.csproj
+++ b/src/Blog/Blog.csproj
@@ -116,6 +116,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Globalization\CultureHelper.cs" />
     <Compile Include="Globalization\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
