--- a/src/BlogTests/BlogTests.csproj
+++ b/src/BlogTests/BlogTests.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\BaseControllerTests.cs" />
+    <Compile Include="Globalization\CultureHelperTests.cs" />
     <Compile Include="Helpers\HtmlHelperExtensionsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
