--- a/src/Blog/Views/Web.config
+++ b/src/Blog/Views/Web.config
@@ -19,6 +19,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="Blog.Helpers"/>
         <add namespace="Blog.Globalization"/>
+        <add namespace="Blog.Models"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
